Refactor font-weight calculations for headings and strong elements in rx.css

--- a/assets/rx.css
+++ b/assets/rx.css
@@ -132,17 +132,44 @@
 
 .bq-content.rx-content h1 {
   font-size: var(--font-size-h1);
+  font-weight: calc(var(--font-weight-h1) - 100);
   line-height: var(--line-height-sm);
 }
 
 .bq-content.rx-content h2 {
   font-size: var(--font-size-h2);
+  font-weight: calc(var(--font-weight-h2) - 100);
   line-height: var(--line-height-sm);
 }
 
 .bq-content.rx-content h3 {
   font-size: var(--font-size-h3);
+  font-weight: calc(var(--font-weight-h3) - 100);
   line-height: var(--line-height-sm);
+}
+
+.bq-content.rx-content h1 b,
+.bq-content.rx-content h1 strong {
+  font-weight: calc(var(--font-weight-h1) + 200);
+}
+
+.bq-content.rx-content h2 b,
+.bq-content.rx-content h2 strong {
+  font-weight: calc(var(--font-weight-h2) + 200);
+}
+
+.bq-content.rx-content h3 b,
+.bq-content.rx-content h3 strong {
+  font-weight: calc(var(--font-weight-h3) + 200);
+}
+
+.bq-content.rx-content h4 b,
+.bq-content.rx-content h4 strong ,
+.bq-content.rx-content h5 b,
+.bq-content.rx-content h5 strong,
+.bq-content.rx-content h6 b,
+.bq-content.rx-content h6 strong {
+  font-weight: calc(var(--font-weight-headers) + 200);
 }
 
 .bq-content.rx-content a,
@@ -190,7 +217,7 @@
 }
 
 .bq-content.rx-content dt {
-  font-weight: calc(var(--font-weight-headers) - 100);
+  font-weight: var(--font-weight-bold);
 }
 
 .bq-content.rx-content dd + dt {
@@ -260,7 +287,7 @@
 }
 
 .bq-content.rx-content thead th {
-  font-weight: calc(var(--font-weight-headers) - 100);
+  font-weight: var(--font-weight-bold);
 }
 
 .bq-content.rx-content address {
@@ -318,7 +345,7 @@
 
 .bq-content.rx-content b,
 .bq-content.rx-content strong {
-  font-weight: var(--font-weight-headers);
+  font-weight: var(--font-weight-semibold);
 }
 
 .bq-content.rx-content dfn[title],
