--- a/assets/rx.css
+++ b/assets/rx.css
@@ -150,16 +150,19 @@
 
 .bq-content.rx-content h1 b,
 .bq-content.rx-content h1 strong {
+  font-family: inherit;
   font-weight: calc(var(--font-weight-h1) + 200);
 }
 
 .bq-content.rx-content h2 b,
 .bq-content.rx-content h2 strong {
+  font-family: inherit;
   font-weight: calc(var(--font-weight-h2) + 200);
 }
 
 .bq-content.rx-content h3 b,
 .bq-content.rx-content h3 strong {
+  font-family: inherit;
   font-weight: calc(var(--font-weight-h3) + 200);
 }
 
@@ -169,6 +172,7 @@
 .bq-content.rx-content h5 strong,
 .bq-content.rx-content h6 b,
 .bq-content.rx-content h6 strong {
+  font-family: inherit;
   font-weight: calc(var(--font-weight-headers) + 200);
 }
 
