Add margin-bottom reset for last heading elements in rx.css

--- a/assets/rx.css
+++ b/assets/rx.css
@@ -130,6 +130,12 @@
   color: var(--color-primary);
 }
 
+.bq-content.rx-content h1:last-child,
+.bq-content.rx-content h2:last-child,
+.bq-content.rx-content h3:last-child {
+  margin-bottom: 0;
+}
+
 .bq-content.rx-content h1 {
   font-size: var(--font-size-h1);
   font-weight: var(--font-weight-h1);
