--- a/assets/sidebar.css
+++ b/assets/sidebar.css
@@ -98,6 +98,12 @@
   transition-property: max-height;
   transition-duration: var(--animation-duration);
   transition-timing-function: var(--transition-function-ease-out);
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+}
+
+.sidebar__menu-wrapper::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .sidebar__menu-wrapper .sidebar__menu-list {
