--- a/assets/header.css
+++ b/assets/header.css
@@ -104,8 +104,8 @@
 }
 
 .header__search-opener {
-  height: 42px;
-  width: 42px;
+  height: var(--header-icon-height);
+  width: var(--header-icon-width);
   margin: 0;
   padding: 8px;
   border: 1px solid var(--background-accent);
@@ -330,6 +330,11 @@
   margin: 0 0 0 10px;
 }
 
+.header__cart {
+  height: var(--header-icon-height);
+  width: var(--header-icon-width);
+}
+
 .header__cart .fa-spinner-third {
   color: var(--background-primary);
 }
@@ -391,107 +396,6 @@ body:has(#mobile-menu-opener:checked) .header:has(~ #main section:first-child > 
 
 .header:has(~ #main section:first-child > .container) .header__date-picker-wrapper {
   width: calc(100vw - var(--horizontal-padding-mobile, 16px) * 2 - 16px);
-}
-
-.header__app {
-  display: none;
-}
-
-.header__buttons .header__app {
-  display: block;
-}
-
-#section-header .app-mobile .weglot-widget__wrapper {
-  border-radius: var(--border-radius);
-  transition: all var(--animation-duration) var(--transition-function-ease-in-out);
-}
-
-#section-header .app-mobile .weglot-widget__wrapper .weglot-widget__label {
-  transition: all var(--animation-duration) var(--transition-function-ease-in-out);
-}
-
-#section-header .app-mobile .weglot-widget__wrapper:hover {
-  border-color: var(--color-outline-hover);
-}
-
-#section-header .app-mobile .weglot-widget__wrapper:hover .weglot-widget__label {
-  color: var(--color-outline-hover);
-}
-
-#section-header .app-mobile .weglot-widget__dropdown {
-  left: 50%;
-  transform: translate(-50%, 0);
-  border: 1px solid var(--color-border);
-  border-radius: var(--border-radius-rounded);
-  box-shadow: 0 0 8px var(--color-border);
-  transition: all var(--animation-duration) var(--transition-function-ease-in-out);
-}
-
-#section-header .app-mobile .weglot-widget__dropdown--up {
-  top: auto;
-  bottom: calc(100% + 11px);
-}
-
-#section-header .app-mobile .weglot-widget__dropdown--down {
-  bottom: auto;
-  top: calc(100% + 11px);
-}
-
-#section-header .app-mobile .weglot-widget__dropdown:hover {
-  border-color: var(--color-outline-hover);
-}
-
-#section-header .app-mobile .weglot-widget__dropdown:before,
-#section-header .app-mobile .weglot-widget__dropdown:after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-  width: 0px;
-  height: 0px;
-  border-style: solid;
-  transition: all var(--animation-duration) var(--transition-function-ease-in-out);
-}
-
-#section-header .app-mobile .weglot-widget__dropdown--up:before,
-#section-header .app-mobile .weglot-widget__dropdown--up:after {
-  top: 100%;
-  border-width: 10px 10px 0 10px;
-  border-color: var(--background-primary) transparent transparent transparent;
-}
-
-#section-header .app-mobile .weglot-widget__dropdown--up:before {
-  top: calc(100% + 1px);
-  border-color: var(--color-border) transparent transparent transparent;
-}
-
-#section-header .app-mobile .weglot-widget__dropdown--up:hover:before {
-  border-color: var(--color-outline-hover) transparent transparent transparent;
-}
-
-#section-header .app-mobile .weglot-widget__dropdown--down:before,
-#section-header .app-mobile .weglot-widget__dropdown--down:after {
-  bottom: 100%;
-  border-width: 0 10px 10px 10px;
-  border-color: transparent transparent var(--background-primary) transparent;
-}
-
-#section-header .app-mobile .weglot-widget__dropdown--down:before {
-  bottom: calc(100% + 1px);
-  border-color: transparent transparent var(--color-border) transparent;
-}
-
-#section-header .app-mobile .weglot-widget__dropdown--down:hover:before {
-  border-color: transparent transparent var(--color-outline-hover) transparent;
-}
-
-#section-header .app-mobile .weglot-widget__item {
-  white-space: nowrap;
-  transition: all var(--animation-duration) var(--transition-function-ease-in-out);
-}
-
-#section-header .app-mobile .weglot-widget__item:hover {
-  color: var(--color-outline-hover);
 }
 
 @media (min-width: 320px) {
@@ -557,133 +461,5 @@ body:has(#mobile-menu-opener:checked) .header:has(~ #main section:first-child > 
 
   .header__date-picker-wrapper {
     max-width: none;
-  }
-}
-
-@media (min-width: 1200px) {
-  .header__app {
-    display: block;
-    position: absolute;
-    right: calc(var(--horizontal-padding) - 10px);
-    bottom: calc(50% + 1px);
-    transform: translate(100%, 50%);
-    z-index: 1;
-  }
-
-  .header:not(.header-transparent):has(.top-bar__wrapper) .header__app {
-    bottom: calc((var(--header-height) - var(--top-bar-height)) / 2 + 1px);
-  }
-
-  .header__buttons .header__app {
-    display: none;
-  }
-
-  #section-header .header__app [data-short-names="true"] {
-    width: auto;
-    height: auto;
-  }
-
-  #section-header .header__app .weglot-widget__wrapper {
-    width: 42px;
-    height: 42px;
-    padding: 0;
-    border-radius: var(--border-radius);
-    border-color: var(--background-accent);
-  }
-
-  #section-header .header__app .weglot-widget__label {
-    width: 100%;
-    height: 100%;
-    color: var(--background-primary);
-    transition: all var(--animation-duration) var(--transition-function-ease-in-out);
-  }
-
-  #section-header .header__app .weglot-widget__label i {
-    display: none;
-  }
-
-  #section-header .header__app .weglot-widget__label .weglot-widget__currentlang {
-    font-size: 18px;
-    line-height: 1;
-  }
-
-  #section-header .header__app .weglot-widget__wrapper:hover .weglot-widget__label {
-    color: var(--color-outline-hover);
-  }
-
-  #section-header .header__app .weglot-widget__dropdown {
-    left: 50%;
-    transform: translate(-50%, 0);
-    border: 1px solid var(--color-border);
-    border-radius: var(--border-radius-rounded);
-    box-shadow: 0 0 8px var(--color-border);
-    transition: all var(--animation-duration) var(--transition-function-ease-in-out);
-    background-color: var(--background-primary) !important;
-  }
-
-  #section-header .header__app .weglot-widget__dropdown:hover {
-    border-color: var(--color-outline-hover);
-  }
-
-  #section-header .header__app .weglot-widget__dropdown--up,
-  #section-header .header__app .weglot-widget__dropdown--down {
-    top: calc(100% + 11px);
-    bottom: auto;
-  }
-
-  #section-header .header__app .weglot-widget__dropdown:before,
-  #section-header .header__app .weglot-widget__dropdown:after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    transition: all var(--animation-duration) var(--transition-function-ease-in-out);
-  }
-
-  #section-header .header__app .weglot-widget__dropdown--up:before,
-  #section-header .header__app .weglot-widget__dropdown--up:after,
-  #section-header .header__app .weglot-widget__dropdown--down:before,
-  #section-header .header__app .weglot-widget__dropdown--down:after {
-    bottom: 100%;
-    border-width: 0 10px 10px 10px;
-    border-color: transparent transparent var(--background-primary) transparent;
-  }
-
-  #section-header .header__app .weglot-widget__dropdown--up:before,
-  #section-header .header__app .weglot-widget__dropdown--down:before {
-    bottom: calc(100% + 1px);
-    border-color: transparent transparent var(--color-border) transparent;
-  }
-
-  #section-header .header__app .weglot-widget__dropdown--up:hover:before,
-  #section-header .header__app .weglot-widget__dropdown--down:hover:before {
-    border-color: transparent transparent var(--color-outline-hover) transparent;
-  }
-
-  #section-header .header__app .weglot-widget__item {
-    white-space: nowrap;
-    transition: all var(--animation-duration) var(--transition-function-ease-in-out);
-    color: var(--color-primary);
-  }
-
-  #section-header .header__app .weglot-widget__item:hover {
-    color: var(--color-outline-hover);
-  }
-
-  .page-scrolled .header-transparent #section-header .header__app .weglot-widget__label,
-  #section-header .header__inner-background .header__app .weglot-widget__label,
-  #section-header .header__inner:has(#search-opener:checked) .header__app .weglot-widget__label,
-  #section-header .header__inner:has(#mobile-menu-opener:checked) .header__app .weglot-widget__label  {
-    color: var(--color-primary);
-  }
-
-  .page-scrolled .header-transparent #section-header .header__app .weglot-widget__wrapper:hover .weglot-widget__label,
-  #section-header .header__inner-background .header__app .weglot-widget__wrapper:hover .weglot-widget__label,
-  #section-header .header__inner:has(#search-opener:checked) .header__app .weglot-widget__wrapper:hover .weglot-widget__label,
-  #section-header .header__inner:has(#mobile-menu-opener:checked) .header__app .weglot-widget__wrapper:hover .weglot-widget__label {
-    color: var(--color-outline-hover);
   }
 }
