Fixes default arguments in fonts

--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -31,9 +31,9 @@
   {% endfor %}
 
   :root {
-    --font-body:           "{{ settings.body_font.family | default: Open Sans }}", {{ settings.body_font.fallback_families | default: sans-serif }};
-    --font-tagline:        "{{ settings.tagline_font.family | default: Open Sans }}", {{ settings.tagline_font.fallback_families | default: sans-serif }};
-    --font-heading:        "{{ settings.heading_font.family | default: Darker Grotesque }}", {{ settings.heading_font.fallback_families | default: sans-serif }};
+    --font-body:           "{{ settings.body_font.family | default: "Open Sans" }}", {{ settings.body_font.fallback_families | default: "sans-serif" }};
+    --font-tagline:        "{{ settings.tagline_font.family | default: "Open Sans" }}", {{ settings.tagline_font.fallback_families | default: "sans-serif" }};
+    --font-heading:        "{{ settings.heading_font.family | default: "Darker Grotesque" }}", {{ settings.heading_font.fallback_families | default: "sans-serif" }};
     --font-size-h1:        {{ settings.h1_size | append: "px" | default: "80px" }};
     --font-size-h2:        {{ settings.h2_size | append: "px" | default: "64px" }};
     --font-size-h3:        {{ settings.h3_size | append: "px" | default: "56px" }};
