Add rounded corners option and update app preview styles

--- a/assets/app.css
+++ b/assets/app.css
@@ -13,7 +13,7 @@
 
 .app__preview {
   height: 200px;
-  border-radius: var(--border-radius-block);
+  border-radius: var(--border-radius-rounded-blocks);
   background-image: repeating-linear-gradient(
     315deg,
     var(--background-primary),
