Fixes wrong syntax on fonts.liquid

--- a/snippets/fonts.liquid
+++ b/snippets/fonts.liquid
@@ -9,5 +9,5 @@
   {{- settings.body_font | font_link -}}
 {%- endif -%}
 {%- if settings.tagline_font != blank -%}
-  {{- settings.tagline_font | font_link =}}
+  {{- settings.tagline_font | font_link -}}
 {%- endif -%}
