Also render the preview if we don't have an app block yet

--- a/sections/app.liquid
+++ b/sections/app.liquid
@@ -61,15 +61,15 @@
 
 <div class="app__wrapper color-{{- color_scheme.id -}}{% if padding_top != blank or padding_top_mobile != blank %} app__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} app__wrapper--padding-bottom{%- endif -%}" style="{{- variables | escape -}}">
   <div class="app__container container">
-    {%- unless section_preview -%}
-      <div class="app__content">
-        {% render 'app', block: app, section: section %}
-      </div>
-    {%- else -%}
+    {%- if section_preview or app == nil -%}
       <div class="app__preview">
         <span>The contents of this section vary by App.</span>
       </div>
-    {%- endunless -%}
+    {%- else -%}
+      <div class="app__content">
+        {% render 'app', block: app, section: section %}
+      </div>
+    {%- endif -%}
   </div>
 </div>
 
