--- a/sections/collections.liquid
+++ b/sections/collections.liquid
@@ -122,6 +122,7 @@
             show_amount: show_amount,
             show_arrow: show_arrow,
             placeholder: image_placeholder,
+            settings: settings,
             counter_singular: counter_singular,
             counter_plural: counter_plural
         -%}
