--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -116,8 +116,7 @@
         {%- render 'image',
             image: logo_transparent,
             class: 'header__logo-image',
-            custom_width: '170',
-            custom_size: '170px',
+            size: 'logo',
             custom_alt: shop.name,
             keep_type: true
         -%}
