--- a/sections/collection-page.liquid
+++ b/sections/collection-page.liquid
@@ -128,6 +128,11 @@
     "tag": "section",
     "class": "collection-page",
     "templates": ["collection"],
+    "css_assets": [
+      {
+        "file": "focal-image.css"
+      }
+    ],
     "settings": [
       {
         "type": "header",
