--- a/sections/columns.liquid
+++ b/sections/columns.liquid
@@ -75,6 +75,7 @@
       <div class="columns__grid">
         {%- for block in blocks -%}
           {%- assign image        = block.settings.image -%}
+          {%- assign image_alt    = block.settings.image_alt -%}
           {%- assign icon         = block.settings.icon -%}
           {%- assign title        = block.settings.title -%}
           {%- assign text         = block.settings.text -%}
@@ -87,9 +88,9 @@
               <div class="columns__image-wrapper">
                 {%- render 'image',
                     image: image,
-                    loading: 'lazy',
-                    class: 'columns__image',
-                    size: 'm'
+                    image_alt: image_alt,
+                    image_class: 'columns__image',
+                    image_size: 'm'
                 -%}
               </div>
             {%- elsif icon != "empty" -%}
@@ -198,6 +199,12 @@
             "type": "image_picker",
             "id": "image",
             "label": "Image (optional)"
+          },
+          {
+            "type": "text",
+            "id": "image_alt",
+            "label": "Alternative text (optional)",
+            "info": "For SEO and Accessibility purposes"
           },
           {
             "type": "header",
