--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -89,9 +89,9 @@
   {%- if logo.url != blank -%}
     {%- render 'image',
         image: logo,
-        class: 'footer__logo-image',
-        size: 'logo',
-        custom_alt: shop.name,
+        image_alt: shop.name,
+        image_class: 'footer__logo-image',
+        image_size: 'logo',
         keep_type: true
     -%}
   {%- elsif custom_title != blank -%}
