--- a/sections/logos.liquid
+++ b/sections/logos.liquid
@@ -60,14 +60,15 @@
 
       <div class="logos__images">
         {%- for block in section.blocks -%}
-          {%- assign image = block.settings.image -%}
+          {%- assign image     = block.settings.image -%}
+          {%- assign image_alt = block.settings.image_alt -%}
 
-          <div class="logos__image-wrapper" id="{{- block.id -}}">
+          <div class="logos__images-wrapper" id="{{- block.id -}}">
             {%- if image.url != blank -%}
               {%- render 'image',
                 image: image,
-                loading: 'lazy',
-                class: 'logos__image',
+                image_alt: image_alt,
+                image_class: 'logos__image',
                 custom_width: '750',
                 custom_size: '750px'
               -%}
@@ -219,6 +220,12 @@
             "id": "image",
             "label": "Image",
             "default": "booqable://assets/image-partner-logo-preview-black.png"
+          },
+          {
+            "type": "text",
+            "id": "image_alt",
+            "label": "Alternative text (optional)",
+            "info": "For SEO and Accessibility purposes"
           }
         ]
       }
