--- a/sections/reset-password-form.liquid
+++ b/sections/reset-password-form.liquid
@@ -122,8 +122,8 @@
     <div class="account__background-wrapper">
       {%- render 'image',
           image: image,
-          class: 'account__background-image',
-          size: 'xxl'
+          image_class: 'account__background-image',
+          image_size: 'xxl'
       -%}
     </div>
   {%- endif -%}
