--- a/sections/search.liquid
+++ b/sections/search.liquid
@@ -199,6 +199,11 @@
     "tag": "section",
     "class": "search",
     "templates": ["search"],
+    "css_assets": [
+      {
+        "file": "focal-image.css"
+      }
+    ],
     "settings": [
       {
         "type": "header",
