--- a/snippets/collections-grid.liquid
+++ b/snippets/collections-grid.liquid
@@ -71,9 +71,9 @@
       <span class="collections__image-item">
         {%- render 'image',
           image: image,
-          loading: 'lazy',
-          class: 'collections__image',
-          size: 'm'
+          image_alt: name,
+          image_class: 'collections__image',
+          image_size: 'm'
         -%}
       </span>
 
