--- a/assets/collections.css
+++ b/assets/collections.css
@@ -127,6 +127,17 @@
   object-fit: var(--object-fit);
 }
 
+.collections__image-wrapper:has(.collections__image-placeholder) {
+  display: block;
+  max-width: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: var(--object-fit);
+}
+
 .collection__wrapper--with-overlay .collections__image-item:after {
   background: linear-gradient(1deg, var(--background-overlay) 0%, var(--background-overlay-00) 80%);
 }
