--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -8,6 +8,7 @@
   {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign description           = section.settings.description -%}
   {%- assign image                 = section.settings.image -%}
+  {%- assign image_alt             = section.settings.image_alt -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -119,10 +120,10 @@
     {%- if image.url != blank -%}
       <div class="accordion__image-wrapper">
         {%- render 'image',
-          image: image,
-          loading: 'lazy',
-          class: 'accordion__image',
-          size: 'xxl'
+            image: image,
+            image_alt: image_alt,
+            image_class: 'accordion__image',
+            image_size: 'xxl'
         -%}
       </div>
     {%- endif -%}
@@ -162,6 +163,12 @@
         "type": "image_picker",
         "id": "image",
         "label": "Background image"
+      },
+      {
+        "type": "text",
+        "id": "image_alt",
+        "label": "Alternative text (optional)",
+        "info": "For SEO and Accessibility purposes"
       },
       {
         "type": "select",
