--- a/sections/edit-password-form.liquid
+++ b/sections/edit-password-form.liquid
@@ -98,8 +98,8 @@
     <div class="account__background-wrapper">
       {%- render 'image',
           image: image,
-          class: 'account__background-image',
-          size: 'xxl'
+          image_class: 'account__background-image',
+          image_size: 'xxl'
       -%}
     </div>
   {%- endif -%}
