--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -9,6 +9,7 @@
 {%- assign full_width              = section.settings.full_width -%}
 {%- assign height                  = section.settings.height -%}
 {%- assign image                   = section.settings.image -%}
+{%- assign image_alt               = section.settings.image_alt -%}
 {%- assign image_mobile            = section.settings.image_mobile -%}
 {%- assign image_placeholder       = settings.image_placeholder -%}
 {%- assign limit_content_width     = section.settings.limit_content_width -%}
@@ -268,23 +269,15 @@
 
         {%- elsif image.url != blank or image_mobile.url != blank -%}
           {%- if image.url != blank -%}
-            <div class="hero__vision-wrapper{% if image_mobile != blank %} hero__vision-wrapper--desktop{% endif %}{% if show_overlay %} hero__vision-wrapper--overlay{%- endif -%}">
+            <div class="hero__vision-wrapper{% if show_overlay %} hero__vision-wrapper--overlay{%- endif -%}">
               {%- render 'image',
                 image: image,
-                loading: 'lazy',
-                class: 'hero__image',
-                size: 'xxl'
-              -%}
-            </div>
-          {%- endif -%}
-
-          {%- if image_mobile.url != blank -%}
-            <div class="hero__vision-wrapper hero__vision-wrapper--mobile{% if show_overlay %} hero__vision-wrapper--overlay{%- endif -%}">
-              {%- render 'image',
-                image: image_mobile,
-                loading: 'lazy',
-                class: 'hero__image',
-                size: 'xxl'
+                image_mobile: image_mobile,
+                image_alt: image_alt,
+                image_class: 'hero__image',
+                image_size: 'xxl',
+                fetchpriority: 'high',
+                loading: 'eager'
               -%}
             </div>
           {%- endif -%}
@@ -350,6 +343,12 @@
         "type": "image_picker",
         "id": "image_mobile",
         "label": "Image mobile (optional)"
+      },
+      {
+        "type": "text",
+        "id": "image_alt",
+        "label": "Alternative text (optional)",
+        "info": "For SEO and Accessibility purposes"
       },
       {
         "type": "text",
