Fix the background height of the Call to action section

--- a/assets/call-to-action.css
+++ b/assets/call-to-action.css
@@ -77,6 +77,10 @@
   margin: 0 auto 40px;
 }
 
+.cta__image-wrapper {
+  height: 100%;
+}
+
 @media (min-width: 992px) {
   .cta__wrapper {
     min-height: var(--min-height);
