Enhance carousel handling

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -42,12 +42,12 @@
 
     {% comment %} Critical JavaScript files {% endcomment %}
     <script src='{{ 'js-utils-core.js' | asset_url }}' defer></script>
+    <script src='{{ 'js-utils.js' | asset_url }}' defer></script>
 
     <script src="{{ "touch-device-notch.js" | asset_url }}" defer></script>
     <script src="{{ "main.js" | asset_url }}" defer></script>
     <script src="{{ "header.js" | asset_url }}" defer></script>
     <script src="{{ "mega-menu.js" | asset_url }}" defer></script>
-    <script src="{{ "carousel.js" | asset_url }}" defer></script>
     <script src="{{ "search.js" | asset_url }}" defer></script>
     <script src="{{ "sidebar.js" | asset_url }}" defer></script>
     <script>
