--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -101,8 +101,7 @@
         image_size: img_size,
         focal: points,
         settings: settings,
-        use_ratio: false,
-        loading: image_loading
+        use_ratio: false
       -%}
     {%- endif -%}
 
