--- a/assets/carousel.css
+++ b/assets/carousel.css
@@ -1,42 +1,29 @@
 .carousel {
   height: 100%;
-  width: 100%;
+  width: calc(100% + 2 * var(--horizontal-padding));
+  margin: 0 calc(-1 * var(--horizontal-padding));
   position: relative;
-}
-
-.carousel *::-webkit-scrollbar,
-.carousel__wrapper *::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-  display: none;
-}
-
-.carousel,
-.carousel__wrapper {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE and Edge */
+  contain: content; /* Performance: Reduces the scope of layout recalculations */
 }
 
 .carousel__wrapper {
-  margin: 0 -16px;
-  width: calc(100% + 32px);
   height: 100%;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  scroll-snap-type: x mandatory;
-  scroll-snap-stop: always;
-  scroll-padding: 0 16px 0 0;
-  scroll-behavior: smooth !important;
+  padding: 0 var(--horizontal-padding);
   display: flex;
+  gap: 16px;
   align-items: stretch;
+
+  /* Optimize with hardware acceleration while ensuring smooth native scrolling */
+  will-change: transform;
+  transition: transform calc(var(--animation-duration, 200ms) + 200ms) var(--transition-function-ease-in-out);
+  backface-visibility: hidden;
 }
 
-.carousel.controls .carousel__wrapper {
+.carousel--controls:not(:has(.carousel__navigation.hidden), :has(.carousel__pagination.hidden)) .carousel__wrapper {
   padding-bottom: 100px;
 }
 
 .carousel__inner {
-  padding: 0 0 0 16px;
   height: 100%;
 }
 
@@ -44,18 +31,7 @@
   position: relative;
   min-width: var(--slide-width-mobile);
   max-width: var(--slide-width-mobile);
-  padding: 0;
-  scroll-snap-align: start;
-  scroll-snap-stop: always;
-}
-
-.carousel__item:last-child {
-  min-width: calc(var(--slide-width-mobile) + 16px);
-  max-width: calc(var(--slide-width-mobile) + 16px);
-}
-
-.carousel__item:last-child .carousel__inner {
-  padding-right: 16px;
+  transition: all calc(var(--animation-duration) + 200ms) var(--transition-function-ease-in-out);
 }
 
 .carousel__pagination {
@@ -63,7 +39,7 @@
   right: 0;
   bottom: 0;
   display: flex;
-  margin: 0 -4px;
+  margin: 0 calc(var(--horizontal-padding) - 4px);
   z-index: 2;
 }
 
@@ -107,7 +83,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  margin: 0 -8px;
+  margin: 0 calc(var(--horizontal-padding) - 8px);
   display: flex;
   z-index: 2;
 }
@@ -151,44 +127,28 @@
 }
 
 @media (min-width: 992px) {
-  .carousel__wrapper {
-    margin: 0 -16px;
-    width: calc(100% + 32px);
-  }
-
   .carousel__item {
     min-width: var(--slide-width);
     max-width: var(--slide-width);
-  }
-
-  .carousel__item:last-child {
-    min-width: calc(var(--slide-width) + 16px);
-    max-width: calc(var(--slide-width) + 16px);
   }
 }
 
 @media (min-width: 1200px) {
-  .carousel__wrapper {
+  .carousel {
     margin: 0;
     width: 100%;
   }
 
-  .carousel__item {
-    min-width: var(--slide-width);
-    max-width: var(--slide-width);
-  }
-
-  .carousel__item:last-child {
-    min-width: calc(var(--slide-width) - 16px);
-    max-width: calc(var(--slide-width) - 16px);
-  }
-
-  .carousel__inner {
-    padding: 0 16px 0 0;
-  }
-
-  .carousel__item:last-child .carousel__inner {
+  .carousel__wrapper {
     padding: 0;
+  }
+
+  .carousel__navigation {
+    margin: 0 -8px;
+  }
+
+  .carousel__pagination {
+    margin: 0 -4px;
   }
 }
 
