--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -23,16 +23,13 @@
 {%- endif -%}
 
 {%- if size > 0 -%}
-  {{ "products.css" | asset_url | stylesheet_tag }}
-  {{ "product-card.css" | asset_url | stylesheet_tag }}
-
   {%- assign button_outline_label  = section.settings.button_outline_label -%}
   {%- assign button_outline_url    = section.settings.button_outline_url -%}
+  {%- assign carousel              = false -%}
   {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign image                 = section.settings.image -%}
   {%- assign image_alt             = section.settings.image_alt -%}
   {%- assign limit                 = 8 -%}
-  {%- assign loading_strategy      = 'lazy' -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -45,16 +42,16 @@
   {%- assign timer                 = section.settings.timer -%}
   {%- assign title                 = section.settings.title -%}
 
-  {%- assign carousel = false -%}
-
   {%- if size > 1 -%}
-    {{ "carousel.css" | asset_url | stylesheet_tag }}
-
     {%- assign carousel = true -%}
+  {%- endif -%}
 
+  {%- if carousel -%}
     {% unless show_pagination %}
       {%- assign limit = nil -%}
     {% endunless %}
+
+    {%- assign timer_val = timer | plus: 0 -%}
   {%- endif -%}
 
   {% comment %} CSS variables start {% endcomment %}
@@ -95,6 +92,13 @@
         --padding-bottom-mobile: 60px;
     {%- endcase -%}
   {%- endcapture -%}
+
+  {%- if carousel -%}
+    {%- capture slide_variables -%}
+      --slide-width: 316px;
+      --slide-width-mobile: 248px;
+    {%- endcapture -%}
+  {%- endif -%}
   {% comment %} CSS variables end {% endcomment %}
 
   <div
@@ -126,63 +130,59 @@
         </div>
       {%- endif -%}
 
-      <div class="products__list{% if carousel %} carousel carousel__pause{%- endif -%}"{% if carousel %} aria-role="Gallery"{% endif %}>
+      <div class="products__list{% if carousel %} carousel carousel__pause{% if show_pagination or show_navigation %} carousel--controls{% endif %}{%- endif -%}"{% if carousel %}{% if timer_val > 0 %} data-carousel-timer="{{- timer_val -}}"{% endif %} style="{{- slide_variables | escape -}}" aria-label="Carousel"{% endif %}>
         {%- if carousel -%}
-          <input class="carousel__timer" type="hidden" name="hidden" value="{{- timer -}}" aria-hidden="true">
-          <div class="carousel__wrapper">
+          <div class="carousel__list">
+            <div class="carousel__wrapper">
         {%- endif -%}
 
-            {%- for item in items limit: limit -%}
-              {% case items_type %}
-                {% when "blocks" %}
-                  {% assign product = item.settings.product %}
-                {% when "collection" %}
-                  {% assign product = item %}
-              {% endcase %}
+              {%- for item in items limit: limit -%}
+                {% case items_type %}
+                  {% when "blocks" %}
+                    {% assign product = item.settings.product %}
+                  {% when "collection" %}
+                    {% assign product = item %}
+                {% endcase %}
 
-              {%- if carousel -%}
-                <div class="carousel__item">
-                  <div class="carousel__inner">
-              {%- endif -%}
-                    {%- render 'product-card',
-                        product: product,
-                        settings: settings,
-                        image_loading: loading_strategy
-                    -%}
-              {%- if carousel -%}
+                {%- if carousel -%}
+                  <div class="carousel__item">
+                    <div class="carousel__inner">
+                {%- endif -%}
+                      {%- render 'product-card',
+                          product: product,
+                          settings: settings
+                      -%}
+                {%- if carousel -%}
+                    </div>
                   </div>
-                </div>
-              {%- endif -%}
-            {%- endfor -%}
+                {%- endif -%}
+              {%- endfor -%}
 
         {%- if carousel -%}
+            </div>
           </div>
 
-          {%- if show_navigation -%}
-            <div class="carousel__navigation hidden" aria-role="Carousel navigation">
-              <span class="carousel__btn prev" aria-label="Prev slide">
-                Previous slide
-                {%- render 'icon-arrow-right-full' -%}
-              </span>
-              <span class="carousel__btn next" aria-label="Next slide">
-                Next slide
-                {%- render 'icon-arrow-right-full' -%}
-              </span>
-            </div>
-          {%- endif -%}
+          <div class="carousel__navigation hidden"{% unless show_navigation %} style="display: none;"{% endunless %} role="navigation" aria-label="Carousel navigation">
+            <span class="carousel__btn prev" aria-label="Prev slide">
+              Previous slide
+              {%- render 'icon-arrow-right-full' -%}
+            </span>
+            <span class="carousel__btn next" aria-label="Next slide">
+              Next slide
+              {%- render 'icon-arrow-right-full' -%}
+            </span>
+          </div>
 
-          {%- if show_pagination -%}
-            <div class="carousel__pagination hidden" aria-role="Carousel navigation">
-              {%- for item in items limit: limit -%}
-                {%- assign first = forloop.first -%}
-                {%- assign index = forloop.index -%}
+          <div class="carousel__pagination hidden"{% unless show_pagination %} style="display: none;"{% endunless %} role="navigation" aria-label="Carousel pagination">
+            {%- for item in items limit: limit -%}
+              {%- assign first = forloop.first -%}
+              {%- assign index = forloop.index -%}
 
-                <span class="carousel__dot{% if first %} active{%- endif -%}" data-index="{{- index -}}" aria-label="Jump to slide {{ index }}">
-                  Go to slide {{ index }}
-                </span>
-              {%- endfor -%}
-            </div>
-          {%- endif -%}
+              <span class="carousel__dot{% if first %} active{%- endif -%}" data-index="{{- index -}}" aria-label="Jump to slide {{ index }}">
+                Go to slide {{ index }}
+              </span>
+            {%- endfor -%}
+          </div>
         {%- endif -%}
       </div>
 
@@ -216,9 +216,27 @@
     "class": "products",
     "css_assets": [
       {
+        "file": "products.css",
+        "include_if": [
+          "has_collection_or_blocks"
+        ]
+      },
+      {
+        "file": "product-card.css",
+        "include_if": [
+          "has_collection_or_blocks"
+        ]
+      },
+      {
         "file": "focal-image.css",
         "include_if": [
           "has_collection_or_blocks"
+        ]
+      },
+      {
+        "file": "carousel.css",
+        "include_if": [
+          "has_multiple_collection_or_blocks"
         ]
       }
     ],
